# JonsboN4Monitor

./: .clang-format  .cursorignore  .gitignore  CMakeLists.txt  JonsboN4Monitor.guiguider  README.md  README.vi.md  partitions.csv  sdkconfig.defaults  sdkconfig.example
custom/: custom.c  custom.h  lvgl_port_v9.c  lvgl_port_v9.h  mqtt_comm.c  mqtt_comm.h  ota_update.c  ota_update.h  usb_comm.c  usb_comm.h
lvgl-simulator/: lv_conf.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
ports/window/: .gitkeep
server/: README.md  read_sensor.py  sensors.txt  test-sensor-result.py  test-usb-comn.py
temp/: board.h
